WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197760
Downgrade RELEASE_ASSERT TO RELEASE_LOG_FAULT for SQLite Class A files
https://bugs.webkit.org/show_bug.cgi?id=197760
Summary
Downgrade RELEASE_ASSERT TO RELEASE_LOG_FAULT for SQLite Class A files
Geoffrey Garen
Reported
2019-05-09 16:49:30 PDT
Downgrade RELEASE_ASSERT TO RELEASE_LOG_FAULT for SQLite Class A files
Attachments
Patch
(1.62 KB, patch)
2019-05-09 16:51 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.64 KB, patch)
2019-05-10 12:02 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.59 KB, patch)
2019-05-13 11:43 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2019-05-09 16:51:32 PDT
Created
attachment 369530
[details]
Patch
Sihui Liu
Comment 2
2019-05-10 11:52:32 PDT
***
Bug 197789
has been marked as a duplicate of this bug. ***
Sihui Liu
Comment 3
2019-05-10 11:54:45 PDT
Probably just makeSafeToUseMemoryMapForPath as we already know the reproducible case?
Geoffrey Garen
Comment 4
2019-05-10 12:02:54 PDT
Created
attachment 369577
[details]
Patch
Geoffrey Garen
Comment 5
2019-05-10 12:40:26 PDT
There seems to be continuing debate about whether makeSafeToUseMemoryMapForPath in WebKit is a sufficient fix. Let's continue to gather these logs (without crashing) to help inform that discussion.
Geoffrey Garen
Comment 6
2019-05-10 14:32:02 PDT
After discussion with Sihui and Jer, I'm going to land this along with the workaround in
bug 197789
.
Geoffrey Garen
Comment 7
2019-05-10 14:36:48 PDT
Committed
r245197
: <
https://trac.webkit.org/changeset/245197
>
Radar WebKit Bug Importer
Comment 8
2019-05-10 14:37:22 PDT
<
rdar://problem/50677550
>
Darin Adler
Comment 9
2019-05-11 13:03:20 PDT
(In reply to Geoffrey Garen from
comment #7
)
> Committed
r245197
: <
https://trac.webkit.org/changeset/245197
>
The patch landed (not the one reviewed) has indentation that does not match the brace structure of the if statement. The call to makeSafeToUseMemoryMapForPath is done unconditionally, not based not the result of isSafeToUseMemoryMapForPath.
Geoffrey Garen
Comment 10
2019-05-13 11:43:59 PDT
Reopening to attach new patch.
Geoffrey Garen
Comment 11
2019-05-13 11:43:59 PDT
Created
attachment 369757
[details]
Patch
WebKit Commit Bot
Comment 12
2019-05-13 14:52:41 PDT
Comment on
attachment 369757
[details]
Patch Clearing flags on attachment: 369757 Committed
r245253
: <
https://trac.webkit.org/changeset/245253
>
WebKit Commit Bot
Comment 13
2019-05-13 14:52:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug