Downgrade RELEASE_ASSERT TO RELEASE_LOG_FAULT for SQLite Class A files https://bugs.webkit.org/show_bug.cgi?id=197760

Reviewed by Jer Noble.

We have all the data we need, and this crash is happening more than
expected.

* platform/sql/SQLiteDatabase.cpp:
(WebCore::SQLiteDatabase::open):


Canonical link: https://commits.webkit.org/211935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245197 268f45cc-cd09-0410-ab3c-d52691b4dbfc